# cortexcrypto

./: .gitignore  BUG_REPORT.md  DOCUMENTATION.md  INSTALLATION.md  README.md  RELEASE_SUMMARY.md  SETUP_GUIDE.md  VULNERABILITY_REPORT.md  comprehensive_tests.py  cortex_standalone.py  cortexcrypto-complete-commands.md  cortexcrypto-neural-system.bundle  leveled_attack_by_0x002.md  neural_crypto_integration.py  neural_integration_example.py  neural_pipeline.py  perfect_score_tests.py  requirements.txt  security_simulation.py  setup.sh  simple_daemon.c  why_i_broke.md
.github/: README_GITHUB.md
attacks_performed/: SUMMARY.md  report_201_300.md  report_301_400.md  report_401_500.md  weak_passwords_10k.txt
cli/: CMakeLists.txt
cli/src/: main.c
cortex_batch1_neural_priority/: NEURAL_NETWORK.md  NEURAL_STATUS.md  cortex_neural_config.json  neural_crypto_integration.py  train_neural_network.py  train_with_real_data.py
cortex_batch1_neural_priority/models/: neural_benchmark.py  neural_test.py
cortex_batch2_supporting/: RULES.md  comprehensive_tests.py  demo_cortexcrypt.py  perfect_score_tests.py  requirements.txt
cortex_batch2_supporting/examples/: basic_usage.py
cortex_batch2_supporting/examples/c/: main.c
cortex_batch3_library/lib/: CMakeLists.txt
cortex_batch3_library/lib/src/: binding.c  crypto.h  daemon_client.c  daemon_client.h  format.c  format.h  neural.h  utils.c  utils.h
cortex_batch4_final/: GITHUB_UPLOAD_SUMMARY.md  UPLOAD_STATUS.md  all_working_methods.sh  install.sh
cortex_batch4_final/sdk/python/: setup.py
cortex_batch4_final/tools/: seed_kdf_mlp.py
cortex_batch4_final/tools/models/: anomaly_autoencoder.onnx  kdf_mlp.onnx
cortex_batch5_remaining/: BATCH_5_FINAL.md
cortex_batch5_remaining/cortexd/: CMakeLists.txt
cortex_batch5_remaining/cortexd/src/: daemon.c  daemon.h  main.c  telemetry.c  telemetry.h
cortex_batch5_remaining/cortexd/systemd/: cortexd.service
cortex_batch5_remaining/scripts/: install.sh
cortex_batch_final_extras/: LICENSE  Makefile  cortex_neural_advanced.h  cortex_neural_advanced.json  cortex_neural_basic.json  cortex_neural_production.c  cortex_neural_production.h  cortex_neural_production.json  cortex_neural_production_metadata.json
cortexd/src/: daemon.c  main.c
lib/: cortexcryptConfig.cmake.in
lib/include/: cortexcrypt.h
lib/src/: binding.c  binding.h  cortexcrypt.c  crypto.c  format.c  neural.c
models/: cortex_neural_advanced.c  cortex_neural_production.c  cortex_neural_weights.h
scripts/: self_heal.sh
sdk/rust/: Cargo.toml
tools/: create_models.py
tools/models/: model_info.json
why_i_broke/: VULNERABILITY_REPORT.md
